added redis to docker-compose.yml

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -21,6 +21,10 @@ services:
       - POSTGRES_USER=root
       - POSTGRES_PASSWORD=Dagad582
       - POSTGRES_DB=main
+  redis:
+    image: "redis:alpine"
+    ports:
+      - "6379:6379"
 
 volumes:
   postgres_data:
