--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,8 +3,8 @@ services:
   web:
     image: pokemons
     build:
-      context: "G:/Homework/POKESEARCH"
-    command: python manage.py runserver
+      context: "G:/Homework4/POKESEARCH"
+    command: python manage.py runserver 0.0.0.0:8000
     volumes:
       - .:/app
     ports:
