--- a/.env.dev
+++ b/.env.dev
@@ -10,3 +10,5 @@ SQL_PORT=5432
 DATABASE=postgres
 CODE_LENGTH=5
 BASE_URL=127.0.0.1:8000
+GOOGLE_CLIENT_ID=199734930050-537ftoij7g6h7sqah4oh2djna3bu3f7j.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
