--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -1,24 +1,49 @@
-name: Run Unit Tests
+name: Docker Compose Tests
 
-on: [push]
+on:
+  push:
+    branches:
+      - main
+  pull_request:
+    branches:
+      - main
 
 jobs:
-  build-and-test:
+  test:
     runs-on: ubuntu-latest
 
+    services:
+      docker:
+        image: docker:19.03.12
+        options: --privileged
+        ports:
+          - 2375:2375
+        volumes:
+          - /var/run/docker.sock:/var/run/docker.sock
+
     steps:
-    - uses: actions/checkout@v2
+    - name: Check out the repo
+      uses: actions/checkout@v2
 
-    - name: Set up Python
-      uses: actions/setup-python@v2
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v1
+
+    - name: Cache Docker layers
+      uses: actions/cache@v2
       with:
-        python-version: '3.11'
+        path: /tmp/.buildx-cache
+        key: ${{ runner.os }}-buildx-${{ github.sha }}
+        restore-keys: |
+          ${{ runner.os }}-buildx-
 
-    - name: Install dependencies
+    - name: Docker Compose up
       run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
+        docker-compose -f docker-compose.yml up -d
 
     - name: Run tests
       run: |
-        python manage.py test api
+        docker-compose -f docker-compose.yml exec web python manage.py test
+
+    - name: Docker Compose down
+      run: |
+        docker-compose -f docker-compose.yml down
