--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -28,7 +28,11 @@ jobs:
         BUILD_CONTEXT=. docker-compose -f docker-compose.yml up -d
     - name: Run tests
       run: |
-        docker-compose -f docker-compose.yml exec -T web python manage.py test --verbosity=2        
+        docker-compose -f docker-compose.yml exec -T web python manage.py test --verbosity=2       
+    - name: Print web service logs for debugging
+      if: failure()
+      run: |
+        docker-compose -f docker-compose.yml logs web
     - name: Docker Compose down
       run: |
         docker-compose -f docker-compose.yml down
